# EnglishAudioBot

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
englishAudioBot/: extract.py  main.py  textToSpeech.py
